[workspace]
resolver = "2"
members = ["coprocessor", "executor", "fhevm-engine-common", "fhevm-listener", 
            "gw-listener", "sns-executor", "transaction-sender", "zkproof-worker", "test-harness"]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[workspace.dependencies]
alloy = { version = "0.11.1", features = ["full", "provider-anvil-api", "provider-anvil-node", "sol-types"] }
alloy-primitives = "0.8.25"
anyhow = "1.0.98"
aws-config = "1.6.3"
bigdecimal = "0.4.8"
bincode = "1.3.3"
clap = { version = "4.5.38", features = ["derive"] }
daggy = "0.8.1"
foundry-compilers = { version = "0.13.5", features = ["svm-solc"] }
futures-util = "0.3.31"
hex = "0.4.3"
lru = "0.13.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.29.0"
prometheus = "0.14.0"
prost = "0.13.5"
rand = "0.9.1"
rayon = "1.10.0"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
serial_test = "3.2.0"
sha3 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
sqlx = { version = "0.8.5", default-features = false, features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "time", "postgres", "uuid"] }
testcontainers = "0.24.0"
thiserror = "2.0.12"
tfhe = { version = "=1.1.2", features = ["boolean", "shortint", "integer", "zk-pok", "experimental-force_fft_algo_dif4"] }
tfhe-versionable = "=0.5.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
tonic = { version = "0.12.3", features = ["server"] }
tonic-build = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json"] }

[profile.dev.package.tfhe]
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
