[workspace]
resolver = "2"
members = [
    "tfhe-worker",
    "fhevm-engine-common",
    "host-listener",
    "gw-listener",
    "sns-worker",
    "transaction-sender",
    "zkproof-worker",
    "test-harness",
    "stress-test-generator"
]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[workspace.dependencies]
alloy = { version = "1.0.41", default-features = false, features = [
    "essentials",
    "std",
    "reqwest-rustls-tls",
    "provider-anvil-api",
    "provider-ws",
    "signer-aws",
] }
alloy-provider = "1.0.41"
alloy-primitives = "1.4.1"
async-trait = "0.1.88"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1.0.98"
aws-config = "1.8.5"
aws-credential-types = "1.2.6"
aws-sdk-kms = { version = "1.68.0", default-features = false }
aws-sdk-s3 = { version = "1.103.0", features = ["test-util"] }
bigdecimal = "0.4.8"
bincode = "1.3.3"
clap = { version = "4.5.38", features = ["derive"] }
daggy = "0.8.1"
foundry-compilers = { version = "0.19.1", features = ["svm-solc"] }
futures-util = "0.3.31"
hex = "0.4.3"
lru = "0.13.0"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.29.0"
prometheus = "0.14.0"
prost = "0.13.5"
rand = "0.9.1"
rayon = "1.11.0"
reqwest = "0.12.20"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
semver = "1.0.26"
serde = "1.0.225"
serde_json = "1.0.140"
serial_test = "3.2.0"
sha3 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "time",
    "postgres",
    "uuid",
] }
testcontainers = "0.24.0"
thiserror = "2.0.12"
tfhe = { version = "1.4.0-alpha.3", features = [
    "boolean",
    "shortint",
    "integer",
    "zk-pok",
    "experimental-force_fft_algo_dif4",
] }
tfhe-versionable = "=0.6.2"
tfhe-zk-pok = "0.7.2"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
tonic = { version = "0.12.3", features = ["server"] }
tonic-build = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }
humantime = "2.2.0"
bytesize = "2.0.1"
http = "1.3.1"

[profile.dev.package.tfhe]
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
