[package]
name = "coprocessor"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.8.0-alpha.8", features = ["boolean", "shortint", "integer", "x86_64-unix", "zk-pok", "experimental-force_fft_algo_dif4"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.8.0-alpha.8", features = ["boolean", "shortint", "integer", "aarch64-unix", "zk-pok", "experimental-force_fft_algo_dif4"] }

[dependencies]
# Common dependencies
tokio.workspace = true
prost.workspace = true
tonic.workspace = true
# Optional dependencies
tonic-web = "0.12"
tonic-health = "0.12"
tonic-types = "0.12"
tokio-util = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
alloy = { version = "0.3.2", features = ["eip712", "sol-types", "signer-local"] }
serde_json = "1.0"
regex = "1.10.5"
lazy_static = "1.5.0"
clap.workspace = true
lru = "0.12.3"
hex = "0.4"
bigdecimal = "0.4"
fhevm-engine-common = { path = "../fhevm-engine-common" }
strum = { version = "0.26", features = ["derive"] }
bincode.workspace = true
sha3.workspace = true

[dev-dependencies]
testcontainers = "0.21"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12"
