[package]
name = "coprocessor"
version = "0.6.1"
default-run = "coprocessor"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
alloy = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
sqlx = { workspace = true }
tfhe = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# crates.io dependencies
actix-web = "4.9.0"
bigdecimal = "0.4"
hex = "0.4"
itertools = "0.13.0"
lazy_static = "1.5.0"
lru = "0.12.3"
opentelemetry = "0.25.0"
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
regex = "1.10.5"
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tonic-health = "0.12"
tonic-types = "0.12"
tonic-web = "0.12"

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }
scheduler = { path = "../scheduler" }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]
gpu = ["tfhe/gpu", "scheduler/gpu", "fhevm-engine-common/gpu"]

[dev-dependencies]
testcontainers = "0.21"
fhevm-listener = { path = "../fhevm-listener" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "coprocessor"
path = "src/bin/coprocessor.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
