[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.8.2", features = ["boolean", "shortint", "integer", "x86_64-unix", "zk-pok", "experimental-force_fft_algo_dif4"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.8.2", features = ["boolean", "shortint", "integer", "aarch64-unix", "zk-pok", "experimental-force_fft_algo_dif4"] }

[dependencies]
clap.workspace = true
tokio.workspace = true
prost.workspace = true
tonic.workspace = true
bincode.workspace = true
sha3.workspace = true
anyhow.workspace = true
daggy.workspace = true
fhevm-engine-common = { path = "../fhevm-engine-common" }

[build-dependencies]
tonic-build = "0.12"
