[package]
name = "executor"
version = "0.1.1"
edition = "2021"

[dependencies]
# workspace dependencies
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
daggy = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

# arch-specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { workspace = true, features = ["x86_64-unix"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { workspace = true, features = ["aarch64-unix"] }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]

[build-dependencies]
tonic-build = "0.12"
