[package]
name = "executor"
version = "0.6.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
daggy = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
tfhe = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }
scheduler = { path = "../scheduler" }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]

[build-dependencies]
tonic-build = "0.12"
