[package]
name = "fhevm-engine-common"
version = "0.6.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
anyhow = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
tfhe = { workspace = true }
prost = { workspace = true }
tonic  = { workspace = true }
sqlx = {workspace = true}
tokio = { workspace = true }
lru = "0.13"
tracing = { workspace = true }

# crates.io dependencies
bigdecimal = "0.4.5"
hex = "0.4"
paste = "1.0.15"
rand_chacha = "0.3.1"
strum = { version = "0.26", features = ["derive"] }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "generate-keys"
path = "src/bin/generate_keys.rs"
