[package]
name = "scheduler"
version = "0.6.1"
edition = "2021"

[dependencies]
# workspace dependencies
anyhow = { workspace = true }
daggy = { workspace = true }
rayon = { workspace = true }
tfhe = { workspace = true }
tokio = { workspace = true }

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]
