[package]
name = "sns-executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
bincode = { workspace = true }
clap = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
hex = "0.4"

aligned-vec = "0.5.0"
num-traits = "=0.2.19"
sqlx = { version = "0.7", features = ["runtime-tokio", "time", "tls-rustls", "postgres", "uuid"] }

serde_json = "=1.0"

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

# arch-specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { workspace = true, features = ["x86_64-unix"] }
[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { workspace = true, features = ["aarch64-unix"] }

[[bin]]
name = "sns_worker"
path = "src/bin/sns_worker.rs"
 

[features]
decrypt_128 = []