[package]
name = "sns-executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
bincode = { workspace = true }
clap = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
tfhe = { workspace = true}
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tfhe-versionable = { workspace = true }
tokio-util = { workspace = true }

# crates.io dependencies
hex = "0.4"
aligned-vec = "0.6"
num-traits = "=0.2.19"
thiserror = "2.0"
serde_json = "=1.0"
aws-sdk-s3 = "1.78"
aws-config = "1.5"


# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

[[bin]]
name = "sns_worker"
path = "src/bin/sns_worker.rs"
 

[features]
test_decrypt_128 = []

[dev-dependencies]
test-harness = { path = "../test-harness" }


[dev-dependencies.sns-executor]
path = "." 
features = ["test_decrypt_128"]

