[package]
name = "test-harness"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies 
tokio = { workspace = true } 
tracing = { workspace = true }
sqlx = { workspace = true}
rand = { workspace = true}
tokio-util = { workspace = true}
alloy = { workspace = true }
hex = "0.4"
serde_json = "1.0" 
testcontainers = "0.23"
anyhow = "1.0"

[features]
gpu = []
