[package]
name = "transaction-sender"
version = "0.6.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# crates.io dependencies
async-trait = "0.1.86"

[build-dependencies]
# crates.io dependencies
foundry-compilers = { version = "0.13.0", features = ["svm-solc"] }

[dev-dependencies]
# crates.io dependencies
serial_test = "3.2.0"
