[package]
name = "zkproof-worker"
version = "0.6.1"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# workspace dependencies
clap = { workspace = true }
tfhe = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
thiserror = { version = "=2.0" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = {workspace = true}
hex = {workspace = true}
alloy-primitives = "=0.8.23"
sha3 = "=0.10.8"
lru = "=0.13"

# local dependencies
fhevm-engine-common = { path = "../fhevm-engine-common" }

# crates.io dependencies
[features]
nightly-avx512 = ["tfhe/nightly-avx512"]

[dev-dependencies]
test-harness = { path = "../test-harness" }

[[bin]]
name = "zkproof_worker"
path = "src/bin/zkproof_worker.rs"
