[package]
authors = ["Zama"]
name = "fhevm_gateway_rust_bindings"
publish = true
edition = "2024"
license = "BSD-3-Clause-Clear"
version = "0.1.0-rc14"

[dependencies]
alloy = { version = "1.0", default-features = false, features = ["contract", "sol-types"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[lib]
path = "src/mod.rs"
