[package]
name = "kms-connector"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
alloy.workspace= true
anyhow.workspace= true
aws-sdk-kms.workspace= true
bincode.workspace= true
bip39.workspace= true
chrono = { version = "0.4", features = ["serde"] }
clap.workspace= true
config.workspace= true
dashmap.workspace= true
futures.workspace= true
serde.workspace= true
sha3.workspace= true
tfhe.workspace = true
tfhe-versionable.workspace = true
thiserror.workspace= true
tokio.workspace= true
tokio-stream.workspace= true
toml.workspace= true
tonic.workspace= true
tracing.workspace= true
url.workspace= true

# AWS S3 dependencies for ciphertext retrieval
aws-config.workspace= true
aws-sdk-s3.workspace= true

# TODO: substitute with existing KMS-Core implementation
tracing-subscriber.workspace= true

# TODO: replace git submodule and path import by git import when fhevm-gateway and kms-core becomes open-source
fhevm_gateway_rust_bindings.workspace= true
kms-grpc.workspace= true

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true

[[bin]]
name = "kms-connector"
path = "src/bin/kms-connector.rs"
