[package]
name = "connector-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
connector-utils.workspace = true
fhevm_gateway_rust_bindings.workspace = true

alloy = { workspace = true, features = ["node-bindings"] }
anyhow.workspace = true
rand.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
testcontainers.workspace = true
